[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "src/day01.rs"

[[bin]]
name = "day2"
path = "src/day02.rs"

[[bin]]
name = "day3"
path = "src/day03.rs"

[[bin]]
name = "day4"
path = "src/day04.rs"

[[bin]]
name = "day5"
path = "src/day05.rs"

[[bin]]
name = "day6"
path = "src/day06.rs"

[[bin]]
name = "day7"
path = "src/day07.rs"

[[bin]]
name = "day8"
path = "src/day08.rs"

[[bin]]
name = "day9"
path = "src/day09.rs"

[[bin]]
name = "day10"
path = "src/day10.rs"

[[bin]]
name = "day11"
path = "src/day11.rs"

[dependencies]
