[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "src/day01.rs"

[[bin]]
name = "day2"
path = "src/day02.rs"

[[bin]]
name = "day3"
path = "src/day03.rs"

[[bin]]
name = "day4"
path = "src/day04.rs"

[[bin]]
name = "day5"
path = "src/day05.rs"

[[bin]]
name = "day6"
path = "src/day06.rs"

[dependencies]
